# virdant

./: .gitignore  AGENTS.md  ARCHITECTURE.md  COMMIT.txt  Cargo.toml  GRAMMAR.txt  Makefile  README.md  SYNC_NOTES.md  SYNC_PLAN.md  SYNC_RETRO.md  fix_newlines.py  strip_semis.py
.augment/rules/: never-run-code-formatters-without-asking.md  newlines-at-end-of-file.md  no-new-asserts-in-tests.md  no-tests.md
.github/workflows/: build-release.sh  cargo_test.yaml  release.yaml
assets/: blink.vir
demo/: Makefile  icesugar.pcf  main.py  prog.sh  script.ys  sim.sh  testbench.v
demo/ext/: ClockInverter.v  SRam.v  picorv32.v
demo/firmware/: hello.s  main.s  random.s  write.s
demo/src/: memory.vir  picorv32.vir  pipe.vir  resetter.vir  spi.vir  top.vir  top2.vir  uart.vir
docs/: Makefile  pyproject.toml  serve.sh  watch.sh
docs/source/: coding-conventions.rst  conf.py  functions.rst  getting-started.rst  grammar_ext.py  index.rst  modules.rst  packages.rst  principles.rst  sockets.rst  tooltip_ext.py  verilog_ext.py  virdant_ext.py
examples/: arbiter.vir  basic.vir  blink.vir  buffer.vir  combinational.vir  conditional_statements.vir  delay.vir  dontcare.vir  echo.vir  edge.vir  enums.vir  extensions.vir  extmods.vir  fns.vir  it.vir  lfsr.vir  lights.vir  literals.vir  matches.vir  on_stmts.vir  queue.vir  random.vir  resetter.vir  rf.vir  sequential.vir  sockets.vir  structs.vir  tlul_arbiter.vir  tlul_mux.vir  tlul_xbar.vir  top.vir  uart.vir  valid.vir  wb_xbar.vir
examples/arithmetic/: Virdant.toml
examples/gcd/: Makefile
examples/passthrough/: Virdant.toml
examples/uart_alice/: Makefile  README.md  Virdant.toml  out.txt  tb.sv
examples/uart_hi/: Virdant.toml
foo/: virdant.toml
lib/: builtin.vir
riscv/: alu.vir  control.vir  core.vir  cpu.vir  decoder.vir  extend.vir  ifetch.vir  immgen.vir  rf.vir  top.vir  types.vir
riscv/ext/: Mem.sv
skills/virdant/: SKILL.md  coding-conventions.md
sprout/: Cargo.toml
sprout/src/: db.rs  diagnostics.rs  lib.rs  queries.rs  types.rs
sprout/src/common/: graph.rs
sprout/src/db/: guts.rs  macros.rs
sprout/src/queries/: check.rs  check_drivers.rs  location.rs  package.rs  parsing.rs  syntax.rs  typecheck.rs  typing.rs
sprout/src/syntax/: ast.rs  grammar.lalrpop  payload.rs  token.rs
sprout/src/types/: signature.rs  typ.rs  typedef.rs  typing.rs
tests/: Makefile
tests/basics/: Makefile  basic.vir  tb.sv
tests/drivers/: Makefile  Virdant.toml  tb.sv
tests/errors/: Makefile  basic_typechecking.vir  clock.vir  clock_domain_crossing.vir  combinational_loop.vir  combinational_loop_dependson.vir  drive_sink.vir  drivers.vir  duplicate_enum_value.vir  duplicate_names.vir  index_out_of_bounds.vir  it.vir  match_else_not_last.vir  match_missing_bit.vir  match_missing_enum.vir  match_missing_union.vir  not_it.vir  (+21 more)
verilog/: tb.sv
vir/: Cargo.toml
vir-compile/: Cargo.toml
vir-dump/: Cargo.toml
vir-dump/src/: main.rs
vir-lsp/: Cargo.toml
vir-mlir/: Cargo.toml
vir-mlir/src/: main.rs  mlir.rs
virdant/: Cargo.toml  build.rs  out.txt  out3.txt  out4.txt
virdant-common/: Cargo.toml
virdant-db/: Cargo.toml  README.md
virdant-db-macros/: Cargo.toml
virdant-db/src/: codegen.rs  lib.rs  scanner.rs
virdant-db/src/runtime/: builder.rs  cache.rs  db.rs  graphviz.rs  mod.rs
virdant-hir/: Cargo.toml
virdant-parser/: Cargo.toml
virdant-tokenizer/: Cargo.toml
virdant/examples/: ext.vir  simbuffer.rs  simgcd.rs  simled.rs  simtest.rs  simuart.rs  top.vir  typecheck.vir
virdant/examples/errors/: missing_dependency.vir  multiple_drivers.vir  no_clock.vir  no_drivers.vir  read_from_sink.vir  wrong_drivertype.vir
virdant/src/: analysis.rs  ast.rs  common.rs  conversion.rs  db.rs  design.rs  diagnostics.rs  docs.rs  error.rs  expr.rs  fqn.rs  grammar.lalrpop  grammar.pest  graph.rs  id.rs  import_grammar.pest  info.rs  lib.rs  loader.rs  location.rs  main.rs  parse.rs  parser.rs  queries.rs  ready.rs  script.rs  sim.rs  source.rs  stringtable.rs  syntax.rs  table.rs  tests.rs  token.rs  tokenizer.rs  transpile.rs  typecheck.rs  types.rs  union.rs  util.rs  verilog.rs  (+2 more)
virdant/src/analysis/: component.rs  db.rs  dependency.rs  drivers.rs  elaboration.rs  location.rs  package.rs  platform.rs  ports.rs  structs.rs  symbols.rs  symboltable.rs  typecheck.rs  types.rs
virdant/src/analysis/db/: graphviz.rs
virdant/src/analysis/symbols/: symbol.rs  table.rs
virdant/src/analysis/types/: context.rs  exprroot.rs  inference.rs  typing.rs
virdant/src/ast/: expr.rs  node.rs  parser_lalrpop.rs  payload.rs
virdant/src/common/: graph.rs  json.rs  math.rs  source.rs  union.rs
virdant/src/conversion/: tests.rs
virdant/src/db/: graphviz.rs  guts.rs  macros.rs  queries.rs
virdant/src/docs/: mod.rs
virdant/src/docs/templates/: base.html.tera  fn_page.html.tera  moddef_page.html.tera  package_index.html.tera  platform_page.html.tera  project_index.html.tera  socket_page.html.tera  style.css  type_page.html.tera
virdant/src/queries/: ast.rs  check.rs  check_drivers.rs  combinational_cycles.rs  component.rs  diagnostics.rs  exprroots.rs  importorder.rs  inputs.rs  itemresolution.rs  location.rs  match_coverage.rs  package.rs  packages.rs  parsing.rs  source.rs  symbols.rs  syntax.rs  typecheck.rs  types.rs  typing.rs
virdant/src/script/: lua.rs  mod.rs  rhai.rs
virdant/src/sim/: circuit.rs  eval.rs  expr.rs  payload.rs  scheduler.rs  sim.rs  state.rs  test.rs  vcd.rs
virdant/src/syntax/: ast.rs  grammar.lalrpop  parse.rs  parsing.rs  payload.rs  test_docstrings.rs  tests.rs  token.rs  virdant.lalrpop
virdant/src/templates/: Makefile  virdant.toml
virdant/src/templates/src/: top.vir
virdant/src/types/: context.rs  inference.rs  match_coverage.rs  signature.rs  typ.rs  typedef.rs  typing.rs
virdant/src/types/typing/: check.rs  domain.rs  infer.rs
virdant/src/verilog/: conversion.rs  expr.rs  macros.rs  stmt.rs  tests.rs
virdant/src/virir/: expr.rs  grammar.lalrpop  parse.rs  tests.rs  transpile.rs  typ.rs
virir/: basic.virir  example.virir  lfsr.virir  on_stmts.virir  top.virir
(+225 files in other folders)
