[package]
name = "vir-mlir"
version = "0.1.0-rc0"
edition = "2021"
license = "MIT"
description = "The Virdant MLIR compiler. Virdant is a modern hardware description language."
readme = "../README.md"
publish = true
authors = ["Michael Maloney"]
default-run = "vir-mlir"

[[bin]]
name = "vir-mlir"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.16"
virdant = { path = "../virdant", version = "0.1.0-rc0" }
clap = { version = "4.2", features = ["derive"] }
pest = "2.7.11"
pest_derive = { version = "2.7.11", features = ["grammar-extras"] }
