[package]
name = "virdant-db"
version = "0.1.0"
edition = "2021"
authors = ["Virdant developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/virdant/virdant"
description = "Build-time incremental database/query system generator"

[dependencies]
indexmap = "2.2.3"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
walkdir = "2"
anyhow = "1.0"
virdant-db-macros = { path = "../virdant-db-macros" }

[features]
default = ["graphviz", "tracing"]
graphviz = []
tracing = []

[dev-dependencies]
trybuild = "1.0"